feat: community detection

--- a/for-local.ipynb
+++ b/for-local.ipynb
@@ -355,6 +355,186 @@
     "# }\n",
     "# order by asc(?cityLabel)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "749c51e0-fe36-4e25-adb9-1a36296ef47c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#clean all\n",
+    "\n",
+    "delete_all_edges_query = \"match( ()-[r]->()) delete r;\"\n",
+    "delete_all_nodes_query = \"match (n) delete n;\"\n",
+    "\n",
+    "conn.query(delete_all_edges_query)\n",
+    "conn.query(delete_all_nodes_query)\n",
+    "\n",
+    "conn.query('match (n) return count(n)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb1f5010-96be-47d1-b31e-476438684b7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node_csv = \"\"\"\n",
+    "WITH \"https://github.com/neo4j-graph-analytics/book/raw/master/data/\" AS base WITH base + \"sw-nodes.csv\" AS uri\n",
+    "LOAD CSV WITH HEADERS FROM uri AS row\n",
+    "MERGE (:Library {id: row.id})\n",
+    "\"\"\"\n",
+    "\n",
+    "relationship_csv = \"\"\"\n",
+    "WITH \"https://github.com/neo4j-graph-analytics/book/raw/master/data/\" AS base WITH base + \"sw-relationships.csv\" AS uri\n",
+    "LOAD CSV WITH HEADERS FROM uri AS row\n",
+    "MATCH (source:Library {id: row.src})\n",
+    "MATCH (destination:Library {id: row.dst}) MERGE (source)-[:DEPENDS_ON]->(destination)\n",
+    "\"\"\"\n",
+    "\n",
+    "conn.query(node_csv)\n",
+    "conn.query(relationship_csv)\n",
+    "conn.query('match (n) return count(n)') , conn.query('match ()-[r]->() return count(r)') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f2f2878-a3a4-42f5-8db3-9f9af1fe52e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#push it in memeory for fast streaming\n",
+    "# the stars are because our graph uses exclusively the database\n",
+    "native_creation = \"\"\"\n",
+    "call gds.graph.create('dependencies', '*', '*')\n",
+    "\"\"\"\n",
+    "\n",
+    "conn.query(native_creation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "977d6fc3-a051-4214-a600-2aebfc9ec218",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#weakly connected components method\n",
+    "\n",
+    "wcc_apply = \"\"\"\n",
+    "CALL gds.wcc.stream( \"dependencies\", {} ) \n",
+    "YIELD nodeId,componentId\n",
+    "return gds.util.asNode(nodeId).id as name, componentId\n",
+    "ORDER BY componentId, name\n",
+    "\"\"\"\n",
+    "\n",
+    "conn.query(wcc_apply)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f7ebf96-8dc7-4b76-959d-23a32c1ce111",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "drop_em = \"\"\"\n",
+    "call gds.graph.drop(\"dependencies\")\n",
+    "\"\"\"\n",
+    "conn.query(drop_em)\n",
+    "\n",
+    "#clean all\n",
+    "\n",
+    "delete_all_edges_query = \"match( ()-[r]->()) delete r;\"\n",
+    "delete_all_nodes_query = \"match (n) delete n;\"\n",
+    "\n",
+    "conn.query(delete_all_edges_query)\n",
+    "conn.query(delete_all_nodes_query)\n",
+    "\n",
+    "conn.query('match (n) return count(n)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82fb794d-2bdb-486d-a9b1-e67dd47b65fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cql_from_16_lesson = \"\"\"\n",
+    "CREATE (n1:Node {id: 'n1'}),\n",
+    "    (n2:Node {id: 'n2'}),\n",
+    "    (n3:Node {id: 'n3'}),\n",
+    "    (n4:Node {id: 'n4'}),\n",
+    "    (n5:Node {id: 'n5'}),\n",
+    "    (n6:Node {id: 'n6'}),\n",
+    "    (n7:Node {id: 'n7'}),\n",
+    "\n",
+    "    (n1)-[:CONNECTS]->(n2),\n",
+    "    (n2)-[:CONNECTS]->(n1),\n",
+    "    (n2)-[:CONNECTS]->(n3),\n",
+    "    (n3)-[:CONNECTS]->(n2),\n",
+    "    (n3)-[:CONNECTS]->(n1),\n",
+    "    (n1)-[:CONNECTS]->(n3),\n",
+    "    (n1)-[:CONNECTS]->(n4),\n",
+    "    (n4)-[:CONNECTS]->(n1),\n",
+    "    (n1)-[:CONNECTS]->(n5),\n",
+    "    (n5)-[:CONNECTS]->(n6),\n",
+    "    (n5)-[:CONNECTS]->(n7),\n",
+    "    (n6)-[:CONNECTS]->(n7),\n",
+    "    (n7)-[:CONNECTS]->(n6)\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "#Create in-memory graph\n",
+    "in_memorize = \"\"\"\n",
+    "CALL gds.graph.create('my_graph', '*', '*')\n",
+    "\"\"\"\n",
+    "\n",
+    "strongly_connected_query = \"\"\"\n",
+    "CALL gds.alpha.scc.stream('my_graph')\n",
+    "YIELD nodeId, componentId\n",
+    "RETURN gds.util.asNode(nodeId).id AS id, componentId\n",
+    "ORDER BY componentId, id\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "conn.query(cql_from_16_lesson)\n",
+    "conn.query(in_memorize)\n",
+    "conn.query(strongly_connected_query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e9196e7-4dc7-4b6c-abed-afcbe0a5dbe6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "drop_em = \"\"\"\n",
+    "call gds.graph.drop(\"my_graph\")\n",
+    "\"\"\"\n",
+    "conn.query(drop_em)\n",
+    "\n",
+    "delete_all_edges_query = \"match( ()-[r]->()) delete r;\"\n",
+    "delete_all_nodes_query = \"match (n) delete n;\"\n",
+    "\n",
+    "conn.query(delete_all_edges_query)\n",
+    "conn.query(delete_all_nodes_query)\n",
+    "\n",
+    "conn.query('match (n) return count(n)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7c65791-b5b7-4726-8e9b-9423604f9355",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
