--- a/for-sandbox.ipynb
+++ b/for-sandbox.ipynb
@@ -531,19 +531,93 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fbb47e5f-a979-4ee8-b9bc-af6dcab45729",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#unweighted louvain\n",
+    "\n",
+    "louvain_method = \"\"\"\n",
+    "CALL gds.louvain.stream( \"interactions-undirected\", {} ) \n",
+    "YIELD nodeId,communityId \n",
+    "RETURN communityId, count(distinct nodeId) as members\n",
+    "ORDER by members DESC \n",
+    "LIMIT 10;\n",
+    "\"\"\"\n",
+    "\n",
+    "conn.query(louvain_method)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04b8a239-5ad9-4b04-893b-64a079c60142",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#weighted louvain\n",
+    "\n",
+    "weighted_louvain_method = \"\"\"\n",
+    "CALL gds.louvain.stream( \"interactions-weighted\", {relationshipWeightProperty: \"weight\"} ) \n",
+    "YIELD nodeId,communityId \n",
+    "RETURN communityId, count(distinct nodeId) as members\n",
+    "ORDER by members DESC \n",
+    "LIMIT 10;\n",
+    "\"\"\"\n",
+    "\n",
+    "conn.query(weighted_louvain_method)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "172afd9a-bef0-4440-b5b3-0a6efe23dbf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#unweighted louvain modularity\n",
+    "\n",
+    "write_louvain_method = \"\"\"\n",
+    "CALL gds.louvain.write( \"interactions-undirected\", {writeProperty: \"louv_community\"} ) \n",
+    "YIELD communityCount,modularity, modularities \n",
+    "\"\"\"\n",
+    "\n",
+    "conn.query(write_louvain_method)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c218a91f-62fb-41b3-a7d7-ba012300a81c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#weighted louvain modularity\n",
+    "\n",
+    "write_weighted_louvain_method = \"\"\"\n",
+    "CALL gds.louvain.write( \"interactions-weighted\", {relationshipWeightProperty: \"weight\", writeProperty: \"louv_community_weighted\"} ) \n",
+    "YIELD communityCount,modularity, modularities \n",
+    "\"\"\"\n",
+    "\n",
+    "conn.query(write_weighted_louvain_method)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bbccadfa-96b8-44fe-b6a9-e4b9ce50b86a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "drop_em = \"\"\"\n",
-    "call gds.graph.drop('interactions-undirected\"')\n",
-    "\"\"\"\n",
-    "conn.query(drop_em)\n",
+    "# drop_em = \"\"\"\n",
+    "# call gds.graph.drop('interactions-undirected\"')\n",
+    "# \"\"\"\n",
+    "# conn.query(drop_em)\n",
     "\n",
-    "drop_em = \"\"\"\n",
-    "call gds.graph.drop('interactions-weighted')\n",
-    "\"\"\"\n",
-    "conn.query(drop_em)"
+    "# drop_em = \"\"\"\n",
+    "# call gds.graph.drop('interactions-weighted')\n",
+    "# \"\"\"\n",
+    "# conn.query(drop_em)"
    ]
   }
  ],
